
file(GLOB_RECURSE SRC_FILES *.cpp *.c)

add_library(${PROJECT_NAME} ${SRC_FILES})
target_link_libraries(${PROJECT_NAME} ${LIBS})


install(TARGETS ${PROJECT_NAME} ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/dist/${PLATFORM}/lib)

install(DIRECTORY io codec DESTINATION ${PROJECT_SOURCE_DIR}/dist/${PLATFORM}/include FILES_MATCHING PATTERN "*.h")

file(GLOB_RECURSE INC_FILES *.h *.hpp)
install(FILES ${INC_FILES} DESTINATION ${PROJECT_SOURCE_DIR}/dist/${PLATFORM}/include)

