file(GLOB_RECURSE SRC_FILES *.cpp *.c)

add_library(${PROJECT_NAME} ${SRC_FILES})
target_link_libraries(${PROJECT_NAME} ${LIBS})

file(GLOB_RECURSE INC_FILES *.h *.hpp)
#install(TARGETS ${PROJECT_NAME} ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/dist/${PLATFORM}/lib)
#install(DIRECTORY io codec DESTINATION ${PROJECT_SOURCE_DIR}/dist/${PLATFORM}/include FILES_MATCHING PATTERN "*.h")
#install(FILES ${INC_FILES} DESTINATION ${PROJECT_SOURCE_DIR}/dist/${PLATFORM}/include)

install(TARGETS ${PROJECT_NAME} ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/../lib/${PROJECT_NAME}/${PLATFORM})
install(DIRECTORY io codec thread DESTINATION ${PROJECT_SOURCE_DIR}/../include/${PROJECT_NAME} FILES_MATCHING PATTERN "*.h")
install(FILES ${INC_FILES} DESTINATION ${PROJECT_SOURCE_DIR}/../include/${PROJECT_NAME} )

