SET(EXAMPLE dog_example)
SET(PLATFORM ${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR})

FIND_LIBRARY(LIB_WATCHDOG NAMES watchdog PATHS ${PROJECT_SOURCE_DIR}/dist/lib/${PLATFORM})
FIND_LIBRARY(LIB_SAFENET NAMES hasp PATHS ${PROJECT_SOURCE_DIR}/lib/safenet/${PLATFORM} )
LIST(APPEND LIBS ${LIB_WATCHDOG} ${LIB_SAFENET} pthread glog crypto)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/dist/include)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/example SRC_LISTS)
ADD_EXECUTABLE(${EXAMPLE} ${SRC_LISTS})
TARGET_LINK_LIBRARIES(${EXAMPLE} ${LIBS})

INSTALL(TARGETS ${EXAMPLE} RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/dist/example)