AUX_SOURCE_DIRECTORY(. SRC_LIST)
AUX_SOURCE_DIRECTORY(safenet SRC_SAFENET)
AUX_SOURCE_DIRECTORY(utils SRC_UTILS)

LIST(APPEND SRC_LIST ${SRC_SAFENET} ${SRC_UTILS})

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRC_LIST})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBS})

INSTALL(TARGETS ${PROJECT_NAME} ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/dist/lib/${PLATFORM})
INSTALL(FILES ${PROJECT_SOURCE_DIR}/lib/safenet/${PLATFORM}/libhasp.a DESTINATION  ${PROJECT_SOURCE_DIR}/dist/lib/${PLATFORM})
INSTALL(FILES include/watch_dog.h DESTINATION  ${PROJECT_SOURCE_DIR}/dist/include)