SET(DOG_TOOL dog_tool)
SET(MODEL_ENCRYPT model_encrypt)
SET(MODEL_DECRYPT model_decrypt)
SET(PERM_TEST perf_test)


AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRC_LISTS)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/safenet SRC_SAFENET)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/utils SRC_UTILS)

LIST(APPEND SRC_LISTS ${SRC_SAFENET} ${SRC_UTILS})

ADD_EXECUTABLE(${DOG_TOOL} dog_tool.cpp ${SRC_LISTS})
ADD_EXECUTABLE(${MODEL_ENCRYPT} model_encryptor.cpp ${SRC_LISTS})
ADD_EXECUTABLE(${MODEL_DECRYPT} model_decryptor.cpp ${SRC_LISTS})
ADD_EXECUTABLE(${PERM_TEST} perf_test.cpp ${SRC_LISTS})

TARGET_LINK_LIBRARIES(${DOG_TOOL} ${LIBS})
TARGET_LINK_LIBRARIES(${MODEL_ENCRYPT} ${LIBS})
TARGET_LINK_LIBRARIES(${MODEL_DECRYPT} ${LIBS})
TARGET_LINK_LIBRARIES(${PERM_TEST} ${LIBS})

INSTALL(TARGETS ${DOG_TOOL} RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/dist/tools)
INSTALL(TARGETS ${MODEL_ENCRYPT} RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/dist/tools)
INSTALL(TARGETS ${MODEL_DECRYPT} RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/dist/tools)
INSTALL(TARGETS ${PERM_TEST} RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/dist/tools)